fixed header shadow, aligned text, changed service-box size

--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,13 @@ body {
 	height: calc(100vh - 50px);
 	background-image: url(../img/header-lego-img1.jpg);
 	background-size: cover;
+	z-index: 0;
 }
 .header-shadow {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: #00000035;
+	background-color: #00000065;
 	z-index: -1;
 }
 
@@ -65,6 +66,7 @@ body {
 	font-weight: bold;
 }
 .header-title {
+	width: 65%;
 	font-size: 36px;
 	line-height: 42.19px;
 }
@@ -160,8 +162,8 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 340px;
-	width: 332px;
+	height: 250px;
+	width: 240px;
 	background-color: #f1f1f1;
 	color: #000000;
 	transition: 0.5s;
@@ -209,6 +211,13 @@ body {
 	padding: 9px;
 }
 
+@media (min-width: 360px) {
+	.service-box {
+		height: 340px;
+		width: 332px;
+	}
+}
+
 @media (min-width: 768px) {
 	.nav-links {
 		display: flex;
@@ -244,6 +253,7 @@ body {
 
 	.employee-box:nth-of-type(even) {
 		flex-direction: row-reverse;
+		text-align: end;
 	}
 
 	.services {
@@ -274,6 +284,10 @@ body {
 
 	.section-title {
 		justify-content: flex-start;
+	}
+
+	.header-title {
+		width: 65%;
 	}
 
 	.services {
